# ion-codegen

./: .gitmodules  CMakeLists.txt  README.md
depend/: CMakeLists.txt
samples/example1/: CMakeLists.txt  ComponentModel.generated.h  ComponentModel.generated.natvis  Example1.cpp  TestData.h  TestNamedObjectStore.generated.cpp  TestNamedObjectStore.generated.h  TestNamedObjectStore.serialization.generated.h  TestObjectFlatStore.generated.cpp  TestObjectFlatStore.generated.h  TestObjectFlatStore.serialization.generated.h  TestObjectStore.generated.cpp  TestObjectStore.generated.h  TestObjectStore.serialization.generated.h  model.json
scripts/: add_submodules.bat  generate_cmake.bat  init_submodules.bat  run_for_samples.bat  update_submodules_to_latest.bat
src/: CodegenContext.h  CodegenFile.h  CodegenMain.cpp  ComponentWriter.cpp  ComponentWriter.h  ModelWriter.cpp  ModelWriter.h  NatvisWriter.cpp  NatvisWriter.h  Reader.h  SerializationWriter.cpp  SerializationWriter.h  SourceCodeWriter.cpp  SourceCodeWriter.h  StoreSettings.h  StoreWriter.cpp  StoreWriter.h  stdafx.cpp  stdafx.h
